Remove unused attrs.

--- a/tabber.html
+++ b/tabber.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <div id="pitch-detector">
-      <div id="pitch-freq" class="pitch-text">
+      <div id="pitch-freq">
         <p>Hit "Start", play a note, see data below</p>
         <div id="pitch-freq-text">
           <div><span class="note">C</span><sub class="octave">3</sub></div>
